//===- Module.proto ---------------------------------------------*- C++ -*-===//
//
//  Copyright (C) 2018 GrammaTech, Inc.
//
//  This code is licensed under the MIT license. See the LICENSE file in the
//  project root for license terms.
//
//  This project is sponsored by the Office of Naval Research, One Liberty
//  Center, 875 N. Randolph Street, Arlington, VA 22203 under contract #
//  N68335-17-C-0700.  The content of the information does not necessarily
//  reflect the position or policy of the Government and no official
//  endorsement should be inferred.
//
//===----------------------------------------------------------------------===//
syntax = "proto3";
package proto;

import "CodeBlock.proto";
import "DataBlock.proto";
import "SymbolicExpression.proto";

message ByteInterval {
    bytes uuid = 1;
    repeated CodeBlock code_blocks = 2;
    repeated DataBlock data_blocks = 3;
    repeated SymbolicExpression symbolic_expressions = 4;
    uint64 address = 5;
    uint64 size = 6;
    bytes contents = 7;
}
